# ring-client

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  nightly.yml
src/: constant.rs  lib.rs
src/client/: mod.rs
src/client/api/: device.rs  error.rs  mod.rs  session.rs  ticket.rs
src/client/api/location/: event.rs  mod.rs
src/client/authentication/: error.rs  mod.rs
src/client/wrapper/: authentication.rs  device.rs  location.rs  mod.rs
src/helper/: hardware.rs  mod.rs  operating_system.rs  url.rs
tests/: ring_checks.rs
