[package]
name = "ring-client"
version = "0.1.1"
authors = ["Ryan Maber <ryan@ryanmaber.com>"]
license = "MIT"
description = "A Rust client for interfacing with Ring home security devices."
keywords = ["home-security", "smart-home", "home-automation", "client", "ring"]
categories = ["api-bindings"]
edition = "2021"
rust-version = "1.81.0"
readme = "README.md"

homepage = "https://ryanmaber.com"
repository = "https://github.com/ryanmab/ring-client"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.43.1", features = ["macros", "test-util", "tokio-macros"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
futures-util = "0.3.31"
chrono = { version = "0.4.40", features = ["serde"] }
log = "0.4.26"
rand = "0.9.1"
rand_seeder = "0.4.0"

[dev-dependencies]
tokio-test = "0.4.4"
dotenvy_macro = "0.15.7"
