[package]
name = "ring-client"
version = "0.1.3"
authors = ["Ryan Maber <ryan@ryanmaber.com>"]
license = "MIT"
description = "A Rust client for interfacing with Ring home security devices."
keywords = ["home-security", "smart-home", "home-automation", "client", "ring"]
categories = ["api-bindings"]
edition = "2024"
rust-version = "1.85.0"
readme = "README.md"

homepage = "https://ryanmaber.com"
repository = "https://github.com/ryanmab/ring-client"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
reqwest = { version = "0.13.3", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["macros", "test-util", "tokio-macros"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
futures-util = "0.3.32"
chrono = { version = "0.4.44", features = ["serde"] }
log = "0.4.29"
sha2 = "0.10.9"
base64 = "0.22.1"

[dev-dependencies]
tokio-test = "0.4.5"
dotenvy_macro = "0.15.7"
